fix pod image expand overlay on mobile

--- a/app/assets/stylesheets/podcasts.scss
+++ b/app/assets/stylesheets/podcasts.scss
@@ -27,6 +27,7 @@ em {
   display: block;
   height: $left-col-width;
   width: $left-col-width; 
+  position: relative;
 
   & > img {
     height: 100%;
